[package]
name = "upload-image"
version = "0.1.0"
edition = "2021"

[dependencies]
base16ct = "0.1"
base64 = "0.13"
chrono = "0.4"
dotenv = "0.15.0"
hex = "0.4"
image = "0.24"
reqwest = { version = "0.11", features = ["multipart", "stream"] }
sha1 = "0.10"
tempfile = "3.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
